
* enhancements
  * added match_unless_raises to matcher DSL
    * supports easy wrapping of t/u assertions in matchers
    * thanks to Chad Fowler and Glenn Vanderburg for the name
  * and_yield provides configurable eval_context
    * Eric Meyer & David Chelimsky
  * CTRL-C actually stops execution! (Bryan Helmkamp - #911)
  * make drb port configurable (Chris Flipse - #875)

* bug fixes
  * don't define top-level context() method when running in IRB (#899)
  * remove Ruby warning for uninitialized ivar (Bryan Helmkamp - #892)
  * fully qualify reference to Default (Alex Sharp - #895)
  * use runtime version of Test::Unit::VERSION in incompatibility message
    (Ryan Bigg - #916)
  * quote paths in RSpec's own specs so people running in paths with
    spaces in them can achieve green too (Ryan Bigg - #917)
  * ensure drb specs run when EADDRNOTAVAIL (Michael Klett - #881)
  * throw_symbol matcher correctly bubbles errors up (#918)
  * make Rakefile work without Cucumber installed (#919 - devrandom)

=== Version 1.2.9 / 2009-10-05

* enhancements
  * manage backtrace-ignore patterns with Spec::Runner.configure (Martin
    Emde). Closes #870.
  * friendly mock argument expectation failure message (Tim Harper). Closes
    #868.
  * added double() as alias for stub() and mock()
  * failure messages for doubles, mocks and stubs use the right name
  * add let() method to assign memoized attributes (suggestion from Stuart
    Halloway). Closes #857.
  * add its method so you can say:
      describe Array do
        its(:length) { should == 0 }
    (Stephen Touset). Closes #833
  * spec command automatically uses spec/spec.opts if it is present
    (suggestion from Yehuda Katz)
  * rspec now adds PROJECT_ROOT/lib and PROJECT_ROOT/spec to the load path
    * determines PROJECT_ROOT by recursing up until it finds a directory
      that has a ./spec directory (thanks to Scott Taylor)
    * supports require 'spec_helper'