@@ -12,6 +12,7 @@ require 'spec/matchers/equal'
 require 'spec/matchers/errors'
 require 'spec/matchers/exist'
 require 'spec/matchers/generated_descriptions'
+require 'spec/matchers/have_received'
 require 'spec/matchers/has'
 require 'spec/matchers/have'
 require 'spec/matchers/include'
