@@ -8,6 +8,7 @@
     * Eric Meyer & David Chelimsky
   * CTRL-C actually stops execution! (Bryan Helmkamp - #911)
   * make drb port configurable (Chris Flipse - #875)
+  * added test spies (should_have_received) (Joshua Nichols - #906)
 
 * bug fixes
   * don't define top-level context() method when running in IRB (#899)
